--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lulu",
   "version": "1.0.0",
   "description": "",
-  "main": "lulu.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node lulu.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
