--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "token":"Mzg3MzU5MDE2NzQyODEzNjk2.DQdTww.hehwIjl3DpMlGZjz_P5WHrQhvcA",
     "prefix":"pix",
-    "IdOwner":"tuIdDiscord"           
+    "IdOwner":"338327028245725184"           
     }
